# tinue-finder

./: Cargo.toml  README.md
.cargo/: config.toml
src/: alpha_beta.rs  main.rs  tinue_search.rs
src/tests/: alpha_beta_tests.rs  mod.rs  tinue_tests_5s.rs  tinue_tests_6s.rs
