[package]
name = "tinue-finder"
description = "Searches for Tinues in Tak games and saves them in a database"
version = "0.1.0"
authors = ["Jan Schnitker <jan.s.92@web.de>", "Morten Lohne <lohnemorten@gmail.com>"]
edition = "2018"

[dependencies]
taik = { git = "https://github.com/MortenLohne/taik", branch = "f-generic-size" }
board-game-traits = "0.1"
pgn-traits = "0.1.1"
arrayvec = "0.5.1"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
clap = "2"
rayon = "1"

[dependencies.rusqlite]
version = "0.24.0"
features = ["bundled"] # necessary for windows